# mdspan-msvc2019

./: CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  mdspan  tst_mdspan.cc
__p0009_bits/: trait_backports.hpp
